--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-  <title>index.html for mobile</title>
+  <title>Home Controller</title>
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="./fastclick.min.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
   <br>
-  <h1>My Home Remocon</h1>
+  <h1>Home Controller</h1>
   <div id="message">Checking...</div>
 
   <h3>TV</h3>
