--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
     </tr>
   </table>
 
+  <h3>エアコン</h3>
+  <table class="menu">
+    <tr>
+      <td colspan="2" id="aircononoff" class="full">ON / OFF</td>
+    </tr>
+  </table>
+
+  <br>
+
 </body>
 </html>
