--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="./touch-icon-iphone-retina.png">
   <title>Home Controller</title>
   <link rel="stylesheet" href="./main.css">
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="./fastclick.min.js"></script>
   <script type="text/javascript" src="./main.js"></script>
